syntax = "proto3";
package proto;

option go_package = "go-opentracing-example/pb";

service CartService {
  rpc GetCardDetailByIDs(GetCardDetailByIDsRequest) returns (GetCardDetailByIDsResponse) ; // 获取购物车详情，通过购物车ids
  rpc UpdateCartByIDs(UpdateCartByIDsRequest) returns (UpdateCartByIDsResponse) ;       // 更新购物车数据, 将选中的移除购物车.
}

message Cart {
  int64 id = 1;
  int64 goodId = 2;
  bool selected = 3;
}

message GetCardDetailByIDsRequest {
  repeated int64 ids = 1;
}

message GetCardDetailByIDsResponse {
  repeated Cart carts = 1;
}

message UpdateCartByIDsRequest {
  repeated int64 ids = 1;
  bool selected = 2;
}

message UpdateCartByIDsResponse {
}